--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,19 +1,15 @@
 ---
 layout: default
+css_class: single
 ---
-<header class="masthead">
-  <h1 class="masthead-title--small">
-    <a href="{{ site.baseurl }}/">{{ site.name }}</a>
-  </h1>
-</header>
-<div class="content post h-entry">
-	{% if page.microblog == false %}
-		<h1 class="page-title">{{ page.title }}</h1>
-	{% endif %}
-  <div class="post-date">
-    <time class="dt-published" datetime="{{ page.date }}">{{ page.date | date_to_string }}</time>
-  </div>
+<article class="post--single h-entry">
+  {% if page.microblog == false %}
+    <h1>{{ page.title }}</h1>
+  {% endif %}
   <div class="e-content">
   {{ content }}
   </div>
-</div>
+  <footer class="post__footer">
+    <small><time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%a, %b %d, %Y at %I:%M%P" }}</time></small>
+  </footer>
+</article>
